public/css/venuesSwipe.css
/*---------------------------------GENERAL------------------------------------*/
* {
  margin: 0;
}

body {
  overflow-x: hidden;
  display: flex;
  flex-direction: column;
  width: 100vw;
  height: 100vh;
  /* background-color: white; */
}

/*-----------------------------SWIPE CONTAINER--------------------------------*/
.swipe-container {
  --n: 1;
  display: flex;
  align-items: space-between;
  width: 100%;
  width: calc(var(--n) * 100%);
  max-height: 100vh;
  border-top: 5px solid black;
  /* border-bottom: 5px solid black; */
  /* background-color: white; */
  transform: translate(calc(var(--i, 0) / var(--n) * -100%));
  transition: transform 0.3s ease-out;
  cursor: pointer;
}

.venue-box {
  display: flex;
  flex-direction: column;
  width: 100%;
  width: calc(100% / var(--n));
  pointer-events: none;
  /* padding-bottom: 10px; */
}
.venue-pick-title {
  font-size: 1.4rem;
  padding-bottom: 5px;
  font-weight: bolder;
  -webkit-text-stroke: 0.2px black;
}
.venue-image-container {
  width: 100vw;
  height: 40vh;
  overflow: hidden;
  position: relative;
  border-bottom: 5px solid black;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
  margin-bottom: 20px;
  display: flex;
}

.venue-image-container img {
  width: 100%;
  /* border-bottom: 5px solid black; */
}

.venue-info {
  font-family: Montserrat, sans-serif;
  font-style: normal;
  font-weight: lighter;
  font-size: 0.8rem;
  /* line-height: 145.6%; */
  text-align: center;
  color: #000;
}

.venue-title {
  font-size: 1rem;
  padding-bottom: 5px;
  font-weight: bolder;
}

/*--------------------------STEPS/PAGINATION DOTS-----------------------------*/

.step-wrap {
  display: flex;
  flex-direction: row;
  justify-content: center;
  order: 5;
}

.step {
  height: 15px;
  width: 15px;
  margin: 0 2px;
  background-color: #f4ca18;
  border: 1px solid black;
  border-radius: 50%;
  display: inline-block;
  margin-bottom: 15px;
  /* opacity: 0.5; */
  /* box-shadow: inset 0 0 5px #6375b3; */
}

.step.active {
  opacity: 1;
  background-color: #ff3a3a;
}

.step.finish {
  background-color: #f4ca18;
}

/*------------------------------------HEART-----------------------------------*/

.heart-wrap {
  width: 4rem;
  height: 4rem;
  border-radius: 50%;
  border: 2px solid black;
  cursor: pointer;
  z-index: 5;
}

.uncolouredHeart {
  background-image: url(../img/uncolouredHeart.svg);
}

.colouredHeart {
  background-image: url(../img/colouredHeart.svg);
}

/*-----------------------------------STARS------------------------------------*/
.venue-rating-stars img {
  width: 30px;
  height: auto;
  padding-bottom: 5px;
}

/* -----------------------------SUBMIT----------------------------------------- */

.venue-form-wrap {
  display: block;
}
.input-form-hidden {
  display: none;
}
.venue-submit-button {
  margin: 0px auto;
  margin-bottom: 0.5rem;
  font-size: 1rem;
  width: 12rem;
}

